EAS Build and Development Build

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "styled-components": "^6.1.19",
-    "react-native-pager-view": "6.7.1"
+    "react-native-pager-view": "6.7.1",
+    "expo-dev-client": "~5.2.4",
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
