feat: Implement initial authentication flow
This commit introduces the basic authentication flow for the application.

- Add functionality to check the user's login status.
- Display the login screen on initial app launch if the user is not authenticated.
- Redirect to the login screen after the user

--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "package": "com.ilji.android"
     },
     "extra": {
+      "GOOGLE_WEB_CLIENT_ID": "292298493030-l45okif1kf6pjm7llngs94jvlv56hrus.apps.googleusercontent.com",
       "GOOGLE_IOS_CLIENT_ID": "292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7.apps.googleusercontent.com",
       "GOOGLE_ANDROID_CLIENT_ID": "292298493030-22j6paogp17vgtqg3p1at3o6vstlqju4.apps.googleusercontent.com",
       "API_BASE_URL": "http://localhost:8090",
