--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,14 @@
   "include": [
     "./app/**/*.ts",
     "./app/**/*.tsx",
+    "./app/(tabs)/**/*.ts",
+    "./app/(tabs)/**/*.tsx",
     "./components/**/*.ts",
     "./components/**/*.tsx",
     "./src/**/*.ts",
     "./src/**/*.tsx",
+    "./hooks/**/*.ts",
+    "./hooks/**/*.tsx",
     "./expo-env.d.ts",
     "./.expo/types/**/*.ts",
     ".expo/types/**/*.ts",
