--- a/app.json
+++ b/app.json
@@ -2,21 +2,22 @@
   "expo": {
     "name": "ilji_app",
     "slug": "ilji_app",
-    "owner": "nostep_nolife",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "iljiapp",
+    "scheme": "dakkuyaki",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.ilji.ios",
+      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -41,10 +42,21 @@
         }
       ],
       "expo-secure-store",
-      "expo-web-browser"
+      "expo-web-browser",
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3fe826ef-7486-4776-9466-f7b2709be4ab"
+      },
+      "google": {
+        "webClientId": "1000303861580-q67fs068v2f3n8g63t2veb9r8afho1ft.apps.googleusercontent.com"
+      }
+    },
+    "owner": "choiayeong"
   }
 }
