캘린더 기본 기능 백엔드 연결 / R U 가능 (C 수정 중)

--- a/app.json
+++ b/app.json
@@ -22,7 +22,9 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.dakkuyaki.ilji"
+      "package": "com.dakkuyaki.ilji",
+      // 개발 중 http 통신을 허용하기 위한 설정
+      "usesCleartextTraffic": true
     },
     "web": {
       "bundler": "metro",
