--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
