--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
@@ -9,18 +10,8 @@
     }
   },
   "include": [
-    "./app/**/*.ts",
-    "./app/**/*.tsx",
-    "./app/(tabs)/**/*.ts",
-    "./app/(tabs)/**/*.tsx",
-    "./components/**/*.ts",
-    "./components/**/*.tsx",
-    "./src/**/*.ts",
-    "./src/**/*.tsx",
-    "./hooks/**/*.ts",
-    "./hooks/**/*.tsx",
-    "./expo-env.d.ts",
-    "./.expo/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ],
