--- a/app.json
+++ b/app.json
@@ -26,7 +26,6 @@
     "extra": {
       "GOOGLE_WEB_CLIENT_ID": "292298493030-l45okif1kf6pjm7llngs94jvlv56hrus.apps.googleusercontent.com",
       "GOOGLE_IOS_CLIENT_ID": "292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7.apps.googleusercontent.com",
-      "GOOGLE_ANDROID_CLIENT_ID": "292298493030-22j6paogp17vgtqg3p1at3o6vstlqju4.apps.googleusercontent.com",
       "API_BASE_URL": "http://localhost:8090",
       "router": {},
       "eas": {
@@ -50,6 +49,7 @@
         "@react-native-google-signin/google-signin",
         {
           "iosClientId": "292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7.apps.googleusercontent.com",
+          "serverClientId": "292298493030-l45okif1kf6pjm7llngs94jvlv56hrus.apps.googleusercontent.com",
           "iosUrlScheme": "com.googleusercontent.apps.292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7"
         }
       ],
