--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.dakkuyaki.ilji"
+      "package": "com.dakkuyaki.ilji",
+      "usesCleartextTraffic": true
     },
     "web": {
       "bundler": "metro",
