--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-navigation-bar": "~4.2.8",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
@@ -43,7 +45,6 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-shadow-2": "^7.1.2",
@@ -52,8 +53,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "styled-components": "^6.1.19",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-dev-client": "~5.2.4"
+    "@shopify/react-native-skia": "v2.0.0-next.4",
+    "react-native-reanimated": "~3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
