--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -45,6 +47,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-shadow-2": "^7.1.2",
@@ -52,9 +55,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "styled-components": "^6.1.19",
-    "@shopify/react-native-skia": "v2.0.0-next.4",
-    "react-native-reanimated": "~3.17.4"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
