feat(settings): Implement settings screen and refactor auth logic
Implements a new settings screen and refactors the authentication logic to resolve critical build errors.

Features:
- Adds a new settings screen with options for "Account", "Notifications", and a "Dark Mode" toggle.
- Groups all settings-related screens under the `app/(settings)/` route.
- Implements a persistent dark mode using a custom `useColorScheme` hook.

Refactoring:
- Extracts `AuthProvider` and `useSession` from the root `_layout.tsx` into a dedicated `hooks/useAuth.tsx` hook.
- This was necessary to fix module resolution errors (TS2307) and circular dependencies that prevented the app from building correctly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "jsx": "react-native" // Explicitly set JSX option
   },
   "include": [
     "**/*.ts",
