--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.dakkuyaki.ilji",
+      "package": "com.ilji.android",
       "usesCleartextTraffic": true
     },
     "web": {
@@ -43,7 +43,12 @@
       ],
       "expo-secure-store",
       "expo-web-browser",
-      "@react-native-google-signin/google-signin"
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -53,9 +58,8 @@
       "eas": {
         "projectId": "3fe826ef-7486-4776-9466-f7b2709be4ab"
       },
-      "google": {
-        "webClientId": "1000303861580-q67fs068v2f3n8g63t2veb9r8afho1ft.apps.googleusercontent.com"
-      }
+      "GOOGLE_WEB_CLIENT_ID": "292298493030-hd9mqh166896s35q8aeanc4rlah3ednt.apps.googleusercontent.com",
+      "GOOGLE_IOS_CLIENT_ID": "292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7.apps.googleusercontent.com"
     },
     "owner": "choiayeong"
   }
