--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-wheel-color-picker": "^1.3.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
