--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
