feat(settings): add dark-mode in every screen

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
     "ios": {
       "bundleIdentifier": "com.ilji.ios",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSAppTransportSecurity": {
+          "NSAllowsLocalNetworking": true
+        }
       }
     },
     "android": {
