--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native": "0.79.6",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-crop-picker": "^0.51.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -55,6 +56,7 @@
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-wheel-color-picker": "^1.3.1",
