--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "~12.0.1",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.8",
