--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "generate-stickers": "node generate-stickers.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
