--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-webview": "13.13.5",
     "react-native-wheel-color-picker": "^1.3.1",
     "rrule": "^2.8.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
