제 ip주소 좀 적어놨고요 연속날짜의 마지막 날짜를 조회할 때 안 보여주길래 그것 좀 수정했습니다

--- a/app10.json
+++ b/app10.json
@@ -61,7 +61,7 @@
     "extra": {
       "GOOGLE_WEB_CLIENT_ID": "292298493030-l45okif1kf6pjm7llngs94jvlv56hrus.apps.googleusercontent.com",
       "GOOGLE_IOS_CLIENT_ID": "292298493030-8pip95en3s86q8nl6ibnt04t76p4tsm7.apps.googleusercontent.com",
-      "API_BASE_URL": "http://localhost:8090",
+      "API_BASE_URL": "http://192.168.2.27:8090",
       "router": {},
       "eas": {
         "projectId": "bdcf405c-968d-4397-839b-f9f73495ebed"
